# slk-calendar-sync

./: README.md  env.example  pyproject.toml  requirements.txt  run.sh  slk_sync.py
src/: __init__.py  calendar_service.py  config.py  main.py  models.py  slk_api.py
tests/: test_api.py  test_calendar_access.py  test_service_auth.py
